put everything into proper directories and stuff now

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# TwelveLabs Search API testing material and keygen tools.
-TLSearchAPI/videos
-TLSearchAPI/index_id.txt
-TLSearchAPI/index.py
-TLSearchAPI/*.env
-TLSearchAPI/processing_stats.db
-TLSearchAPI/processor.py
-
 # Virtual Environment contents.
 sentinel-venv/
+.venv/
